--- a/twentytwentyone/style.css
+++ b/twentytwentyone/style.css
@@ -20,6 +20,8 @@ Twenty Twenty-One is distributed under the terms of the GNU GPL.
 */
 /*Hello this is Giselle Morales/*
 /* Hi Giselle, I'm Ariel*/
+/* Tue Oct 24*/
+
 
 /**
  * SETTINGS
